--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 db.driver= com.mysql.cj.jdbc.Driver
 db.url= jdbc:mysql://localhost:3306/indigo
 db.username=root
-db.password=Csi@3201
+db.password=
 
 # Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
